--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,11 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.backend</groupId>
-    <artifactId>rest</artifactId>
+    <groupId>com.rest</groupId>
+    <artifactId>backend</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>war</packaging>
-    <name>rest</name>
+    <name>backend</name>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
